[tool.poetry]
name = "nisardev"
version = "0.0.9"
description = "Tools for NISAR/GrIMP L3 products"
authors = ["Ian Joughin <ian@apl.washington.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fastice/nisardev"
repository = "https://github.com/fastice/nisardev"
keywords = ["SAR", "NISAR"]

[tool.poetry.dependencies]
# Its best to handle these through the enviroment file at
# https://github.com/fastice/GrIMPNotebooks/blob/master/binder/environment.yml
# Otherwise pip may cause conflicts with conda packages
#python = ">=3.7"
#gdal = { version = "*", optional = true }
#pyproj = { version = "*", optional = true }
#matplotlib = { version = "*", optional = true }
#dask = { version = "*", optional = true }
#xarray = { version = "*", optional = true }
#rioxarray = { version = "*", optional = true }
#stackstac = "^0.2"
#rio-stac = { git = "https://github.com/developmentseed/rio-stac.git", branch = "main" }
#holoviews = { version = "*", optional = true }
[tool.poetry.dev-dependencies]
ipython = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.9"]
build-backend = "poetry.core.masonry.api"
#requires = ["setuptools", "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]

