[project]
name = "nisardev"
version = "0.1.0"
authors = [{name = "Scott Henderson", email = "3924836+scottyhq@users.noreply.github.com"}]
requires-python = ">= 3.11"
dependencies = [
    "gdal<4",
    "rioxarray",
    "dask",
    "pyproj",
    "matplotlib",
    "holoviews",
    "pandas"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
nisardev = { path = ".", editable = true }

[tool.pixi.dependencies]
gdal = "*"
rioxarray = "*"
dask = "*"
pyproj = "*"
matplotlib = "*"
holoviews = "*"
pandas = "*"

[tool.pixi.tasks]
