[project]
name = "nisardev"
version = "0.1.0"
description = "Tools for nisar cal/val activities and cryo notebooks"
authors = [
    { name = "Ian Joughin" },
    { name = "Scott Henderson", email = "3924836+scottyhq@users.noreply.github.com" },
]
requires-python = ">= 3.11"
dependencies = [
    "gdal",
    "rioxarray",
    "dask",
    "pyproj",
    "matplotlib",
    "holoviews",
    "pandas",
]

[project.urls]
repository = "https://github.com/fastice/grimpfunc.git"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
nisardev = { path = ".", editable = true }

[tool.pixi.dependencies]
gdal = "*"
rioxarray = "*"
dask = "*"
pyproj = "*"
matplotlib = "*"
holoviews = "*"
pandas = "*"

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.dependencies]
pytest = "*"

[tool.pixi.feature.dev.tasks]
test = "pytest -q"

[tool.pixi.package]
name = "nisardev"
version = "0.1.0"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "==0.3.2"

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
gdal = "*"
rioxarray = "*"
dask = "*"
pyproj = "*"
matplotlib = "*"
holoviews = "*"
pandas = "*"
